2008-08-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test000.cxx, test/test002.cxx, test/test004.cxx, test/test007.cxx,
 test/test085.cxx, test/test090.cxx, test/test092.cxx, test/test_helpers.hxx,
 test/unit/test_float.cxx, test/unit/test_pipeline.cxx,
 test/unit/test_sql_cursor.cxx, test/unit/test_stateless_cursor.cxx,
 test/unit/test_test_helpers.cxx:
  - Fixed PQXX_CHECK_THROWS ignoring std::exception-derived exceptions
  - Made PQXX_CHECK_* macros rely more on functions--less preprocessor magic
  - PQXX_CHECK_* macros consistently require semicolon at end of invocation
  - Fixed some signedness warnings in PQXX_CHECK_[NOT_]EQUAL invocations
  - Reused PQXX_CHECK_NOTREACHED to simplify PQXX_CHECK_THROWS
2008-08-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Fixed ordering of library search, thanks Jorgen Austvik
 src/connection.cxx:
  - Fixed memory leak when connection fails, thanks Matthew Fanto
 test/test_helpers.hxx, test085.cxx:
  - Moved string_traits<result> into test helpers for reuse.
 test/test008.cxx, test/test009.cxx:
  - Converted to test framework.
2008-08-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test004.cxx, test/test005.cxx, test/test006.cxx, test/test007.cxx:
  - Converted to test framework.
2008-08-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test002.cxx:
  - Converted to test framework.
2008-07-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test085.cxx, test/test092.cxx:
  - Converted to test framework.
 test/test_helpers.hxx, test/unit/test_test_helpers.cxx:
  - PQXX_CHECK_THROWS() swallowed all std::exception throws!
2008-07-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Don't escape whitespace (which isn't always isprint())
  - Closer match to what libpq's escaping functions seem to do
 test/test_helpers.hxx:
  - New "fail if you got here" macro
  - Check for bad_alloc as a special case
 test/test000.cxx, test/test001.cxx, test/test090.cxx, test/test092.cxx:
  - Use test helpers.  Really helps!